--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -19,8 +19,10 @@ jobs:
         terraform_version: 1.5.7 # Match with Local Terraform version
 
     - name: 'Terraform Init and Plan'
-      run: cd infrastructure && terraform init && terraform plan
+      working-directory: ./infrastructure
+      run: terraform init && terraform plan
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: 'us-east-1'
+        AWS_PROFILE: 'SealStorage'
