--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -20,9 +20,8 @@ jobs:
 
     - name: 'Terraform Init and Plan'
       working-directory: ./infrastructure
-      run: terraform init && terraform plan
+      run: terraform init && terraform plan -var aws_profile=default
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: 'us-east-1'
-        AWS_PROFILE: 'SealStorage'
