--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: 'Terraform Init and Plan'
       working-directory: ./infrastructure
-      run: terraform init && terraform plan -var aws_profile=default
+      run: terraform init && terraform plan
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
